--- a/templates/docs/examples/patterns/chips.html
+++ b/templates/docs/examples/patterns/chips.html
@@ -7,28 +7,49 @@
 <div class="row">
   <div class="col-6">
     <input type="search" name="" id="" placeholder="search" class="u-sv-2 u-no-margin--bottom">
+    <div class="p-card--highlighted">
+      <p class="p-chips">
+        <span class="p-chip--operator">and</span>
+        <span class="p-chip--operator">or</span>
+        <span class="p-chip--operator">not</span>
+      </p>
+      <hr class="">
+      <p class="u-text--muted">Cloud</p>
+      <p class="p-chips">
+        <span class="p-chip is-selected">Google</span>
+        <span class="p-chip">AWS</span>
+        <span class="p-chip">Azure</span>
+      </p>
+      <hr>
+      <p class="u-text--muted">Category</p>
+      <p class="p-chips">
+        <span class="p-chip">and</span>
+        <span class="p-chip">and</span>
+        <span class="p-chip">and</span>
+      </p>
+    </div>
   </div>
+
   <div class="col-6">
-    <div class="p-card">
-      <p class="u-text--muted">Category</p>
+    <div class="p-card--highlighted">
       <p class="p-chips">
-        <span class="p-chip">AND</span>
-        <span class="p-chip">OR</span>
-        <span class="p-chip">NOT</span>
+        <span class="p-chip--operator">and</span>
+        <span class="p-chip--operator">or</span>
+        <span class="p-chip--operator">not</span>
+      </p>
+      <hr class="">
+      <p class="u-text--muted">Cloud</p>
+      <p class="p-chips">
+        <span class="p-chip is-selected">Google</span>
+        <span class="p-chip">AWS</span>
+        <span class="p-chip">Azure</span>
       </p>
       <hr>
       <p class="u-text--muted">Category</p>
       <p class="p-chips">
-        <span class="p-chip">AND</span>
-        <span class="p-chip">AND</span>
-        <span class="p-chip">AND</span>
-      </p>
-      <hr>
-      <p class="u-text--muted">Category</p>
-      <p class="p-chips">
-        <span class="p-chip">AND</span>
-        <span class="p-chip">AND</span>
-        <span class="p-chip">AND</span>
+        <span class="p-chip">and</span>
+        <span class="p-chip">and</span>
+        <span class="p-chip">and</span>
       </p>
     </div>
   </div>
