--- a/templates/docs/examples/patterns/chips.html
+++ b/templates/docs/examples/patterns/chips.html
@@ -7,52 +7,57 @@
 <div class="row">
   <div class="col-6">
     <input type="search" name="" id="" placeholder="search" class="u-sv-2 u-no-margin--bottom">
-    <div class="p-card--highlighted">
-      <p class="p-chips">
-        <span class="p-chip--operator">and</span>
-        <span class="p-chip--operator">or</span>
-        <span class="p-chip--operator">not</span>
-      </p>
-      <hr class="">
-      <p class="u-text--muted">Cloud</p>
-      <p class="p-chips">
-        <span class="p-chip is-selected">Google</span>
-        <span class="p-chip">AWS</span>
-        <span class="p-chip">Azure</span>
-      </p>
-      <hr>
-      <p class="u-text--muted">Category</p>
-      <p class="p-chips">
-        <span class="p-chip">and</span>
-        <span class="p-chip">and</span>
-        <span class="p-chip">and</span>
-      </p>
+    <div class="p-chips">
+      <ul class="p-chips__chips-list">
+        <li class="p-chips__chip--operator">and</li>
+        <li class="p-chips__chip--operator">or</li>
+        <li class="p-chips__chip--operator">not</li>
+      </ul>
+      <p class="p-chips__category">Cloud</p>
+      <ul class="p-chips__chips-list">
+        <li class="p-chips__chip is-selected">Google</li>
+        <li class="p-chips__chip">AWS</li>
+        <li class="p-chips__chip">Azure</li>
+      </ul>
+      <p class="p-chips__category">Regions</p>
+      <ul class="p-chips__chips-list">
+        <li class="p-chips__chip">US-east-1</li>
+        <li class="p-chips__chip">US-east-2</li>
+        <li class="p-chips__chip">US-east-3</li>
+        <li class="p-chips__chip">US-east-4</li>
+        <li class="p-chips__chip">US-east-5</li>
+        <li class="p-chips__chip">US-east-6</li>
+        <li class="p-chips__chip">US-east-7</li>
+      </ul>
     </div>
   </div>
 
   <div class="col-6">
-    <div class="p-card--highlighted">
-      <p class="p-chips">
-        <span class="p-chip--operator">and</span>
-        <span class="p-chip--operator">or</span>
-        <span class="p-chip--operator">not</span>
-      </p>
-      <hr class="">
-      <p class="u-text--muted">Cloud</p>
-      <p class="p-chips">
-        <span class="p-chip is-selected">Google</span>
-        <span class="p-chip">AWS</span>
-        <span class="p-chip">Azure</span>
-      </p>
-      <hr>
-      <p class="u-text--muted">Category</p>
-      <p class="p-chips">
-        <span class="p-chip">and</span>
-        <span class="p-chip">and</span>
-        <span class="p-chip">and</span>
-      </p>
+    <div class="p-chips">
+      <ul class="p-chips__chips-list">
+        <li class="p-chips__chip--operator">and</li>
+        <li class="p-chips__chip--operator">or</li>
+        <li class="p-chips__chip--operator">not</li>
+      </ul>
+      <p class="p-chips__category">Cloud</p>
+      <ul class="p-chips__chips-list">
+        <li class="p-chips__chip is-selected">Google</li>
+        <li class="p-chips__chip">AWS</li>
+        <li class="p-chips__chip">Azure</li>
+      </ul>
+      <p class="p-chips__category">Regions</p>
+      <ul class="p-chips__chips-list">
+        <li class="p-chips__chip">US-east-1</li>
+        <li class="p-chips__chip">US-east-2</li>
+        <li class="p-chips__chip">US-east-3</li>
+        <li class="p-chips__chip">US-east-4</li>
+        <li class="p-chips__chip">US-east-5</li>
+        <li class="p-chips__chip">US-east-6</li>
+        <li class="p-chips__chip">US-east-7</li>
+      </ul>
     </div>
   </div>
+
 </div>
 
 {% endblock %}
