--- a/scss/_vanilla.scss
+++ b/scss/_vanilla.scss
@@ -7,7 +7,7 @@
 @import 'patterns_breadcrumbs';
 @import 'patterns_buttons';
 @import 'patterns_card';
-@import 'patterns_chip';
+@import 'patterns_chips';
 @import 'patterns_code-copyable';
 @import 'patterns_code-numbered';
 @import 'patterns_contextual-menu';
@@ -78,7 +78,7 @@
   @include vf-p-breadcrumbs;
   @include vf-p-buttons;
   @include vf-p-card;
-  @include vf-p-chip;
+  @include vf-p-chips;
   @include vf-p-code-copyable;
   @include vf-p-code-numbered;
   @include vf-p-contextual-menu;
