--- a/templates/docs/examples/patterns/accordion/headings.html
+++ b/templates/docs/examples/patterns/accordion/headings.html
@@ -7,7 +7,24 @@
 <aside class="p-accordion" role="tablist" aria-multiselect="true">
   <ul class="p-accordion__list">
     <li class="p-accordion__group">
-      <button type="button" class="p-accordion__tab--h3" id="tab1" role="tab" aria-controls="tab1-section" aria-expanded="true"><h3 class="u-no-margin--bottom u-no-padding--top">Advanced topics</h3></button>
+      <button type="button" class="p-accordion__tab--with-title" id="tab1" role="tab" aria-controls="tab0-section" aria-expanded="true">
+        <h2 class="p-accordion__title"><span class="u-visualise-font-metrics">Advanced topics</span></h2>
+      </button>
+      <section class="p-accordion__panel" id="tab0-section" role="tabpanel" aria-hidden="false" aria-labelledby="tab0-section">
+        <p>Charm bundles</p>
+        <p>Machine authentication</p>
+        <p>Migrating models</p>
+        <p>Using storage</p>
+        <p>Working with actions</p>
+        <p>Working with resources</p>
+        <p>Cloud image metadata</p>
+        <p>Tools</p>
+      </section>
+    </li>
+    <li class="p-accordion__group">
+      <button type="button" class="p-accordion__tab--with-title" id="tab1" role="tab" aria-controls="tab1-section" aria-expanded="true">
+        <h3 class="p-accordion__title"><span class="u-visualise-font-metrics">Advanced topics</span></h3>
+      </button>
       <section class="p-accordion__panel" id="tab1-section" role="tabpanel" aria-hidden="false" aria-labelledby="tab1-section">
         <p>Charm bundles</p>
         <p>Machine authentication</p>
@@ -20,7 +37,9 @@
       </section>
     </li>
     <li class="p-accordion__group">
-      <button type="button" class="p-accordion__tab--h4" id="tab2" role="tab" aria-controls="tab2-section" aria-expanded="false"><h4 class="u-no-margin--bottom u-no-padding--top">Networking</h4></button>
+      <button type="button" class="p-accordion__tab--with-title" id="tab2" role="tab" aria-controls="tab2-section" aria-expanded="false">
+        <h4 class="p-accordion__title">Networking</h4>
+      </button>
       <section class="p-accordion__panel" id="tab2-section" role="tabpanel" aria-hidden="true" aria-labelledby="tab2-section">
         <p>Working offline</p>
         <p>Fan container networking</p>
@@ -28,7 +47,9 @@
       </section>
     </li>
     <li class="p-accordion__group">
-      <button type="button" class="p-accordion__tab--h5" id="tab3" role="tab" aria-controls="tab3-section" aria-expanded="false"><h5 class="u-no-margin--bottom u-no-padding--top">Miscellaneous</h5></button>
+      <button type="button" class="p-accordion__tab--with-title" id="tab3" role="tab" aria-controls="tab3-section" aria-expanded="false">
+        <h5 class="p-accordion__title">Miscellaneous</h5>
+      </button>
       <section class="p-accordion__panel" id="tab3-section" role="tabpanel" aria-hidden="true" aria-labelledby="tab3-section">
         <p>Juju GUI</p>
         <p>CentOS support</p>
