--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -32,8 +32,8 @@ $color-focus-positive: #003008 !default;
 $color-focus-negative: #3b0006 !default;
 
 // Button background color changes
-$hover-background-darken-percentage: 10%;
-$active-background-darken-percentage: 15%;
+$hover-background-darken-percentage: 0.05;
+$active-background-darken-percentage: 0.15;
 
 // NON-SEMANTIC COLOURS
 $color-label-validated: #006b75;
@@ -61,7 +61,7 @@ $states: (
 //
 // Background colors:
 // --background           - default background color
-// --background-alt       - alternative version of background color, to be used to diffrenciate given surface
+// --background-alt       - alternative version of background color, to be used to differentiate given surface
 // --background-highlight - background used on highlighted elements (for example selected elements in the navigation)
 // --background-overlay   - background used to overlay the screen when showing a modal type dialogs
 //
@@ -78,7 +78,7 @@ $colors--light-theme--text-muted: #666 !default;
 
 $colors--light-theme--background-default: #fff !default;
 $colors--light-theme--background-alt: #f7f7f7 !default;
-$colors--light-theme--background-highlight: rgba($color-x-dark, 0.03) !default;
+$colors--light-theme--background-highlight: rgba($color-x-dark, $hover-background-darken-percentage) !default;
 $colors--light-theme--background-overlay: transparentize($color-dark, 0.15) !default;
 
 $colors--light-theme--border-default: rgba($color-x-dark, 0.2) !default;
