--- a/templates/docs/examples/patterns/accordion/headings.html
+++ b/templates/docs/examples/patterns/accordion/headings.html
@@ -38,7 +38,7 @@
     </li>
     <li class="p-accordion__group">
       <button type="button" class="p-accordion__tab--with-title" id="tab2" role="tab" aria-controls="tab2-section" aria-expanded="false">
-        <h4 class="p-accordion__title">Networking</h4>
+        <h4 class="p-accordion__title"><span class="u-visualise-font-metrics">Networking</span></h4>
       </button>
       <section class="p-accordion__panel" id="tab2-section" role="tabpanel" aria-hidden="true" aria-labelledby="tab2-section">
         <p>Working offline</p>
@@ -48,7 +48,7 @@
     </li>
     <li class="p-accordion__group">
       <button type="button" class="p-accordion__tab--with-title" id="tab3" role="tab" aria-controls="tab3-section" aria-expanded="false">
-        <h5 class="p-accordion__title">Miscellaneous</h5>
+        <h5 class="p-accordion__title"><span class="u-visualise-font-metrics">Miscellaneous</span></h5>
       </button>
       <section class="p-accordion__panel" id="tab3-section" role="tabpanel" aria-hidden="true" aria-labelledby="tab3-section">
         <p>Juju GUI</p>
