--- a/scss/_base_button.scss
+++ b/scss/_base_button.scss
@@ -82,9 +82,9 @@
   $button-disabled-background-color: $color-transparent,
   $button-disabled-border-color: $colors--light-theme--border-high-contrast,
   $button-border-color: $colors--light-theme--border-high-contrast,
-  $button-hover-background-color: darken($color-x-light, $hover-background-darken-percentage),
+  $button-hover-background-color: rgba($color-x-dark, $hover-background-darken-amount),
   $button-hover-border-color: $colors--light-theme--border-high-contrast,
-  $button-active-background-color: darken($color-x-light, $active-background-darken-percentage),
+  $button-active-background-color: rgba($color-x-dark, $active-background-darken-amount),
   $button-active-border-color: $colors--light-theme--border-high-contrast
 ) {
   background-color: $button-background-color;
