--- a/scss/_base_button.scss
+++ b/scss/_base_button.scss
@@ -82,7 +82,7 @@
   $button-disabled-background-color: $color-transparent,
   $button-disabled-border-color: $colors--light-theme--border-high-contrast,
   $button-border-color: $colors--light-theme--border-high-contrast,
-  $button-hover-background-color: rgba($color-x-dark, $hover-background-darken-amount),
+  $button-hover-background-color: scale-color($color-x-light, $lightness: -5%),
   $button-hover-border-color: $colors--light-theme--border-high-contrast,
   $button-active-background-color: rgba($color-x-dark, $active-background-darken-amount),
   $button-active-border-color: $colors--light-theme--border-high-contrast
