--- a/scss/_patterns_buttons.scss
+++ b/scss/_patterns_buttons.scss
@@ -16,12 +16,7 @@
   %p-button {
     @extend %vf-button-base;
 
-    @include vf-button-pattern(
-      $button-disabled-background-color: $color-x-light,
-      $button-disabled-border-color: $color-x-light,
-      $button-active-background-color: darken($color-light, $active-background-darken-amount),
-      $button-active-border-color: $color-x-light
-    );
+    @include vf-button-pattern($button-disabled-background-color: $color-x-light, $button-disabled-border-color: $color-x-light, $button-active-border-color: $color-x-light);
   }
 
   .p-button {
@@ -49,12 +44,11 @@
       $button-background-color: $color-brand,
       $button-border-color: $color-brand,
       $button-text-color: vf-contrast-text-color($color-brand),
-      $button-hover-background-color: darken($color-brand, $hover-background-darken-amount),
-      $button-hover-border-color: darken($color-brand, $hover-background-darken-amount),
+      $button-hover-background-color: scale-color($color-brand, $lightness: -$hover-background-darken-amount * 100),
       $button-disabled-background-color: $color-brand,
       $button-disabled-border-color: $color-brand,
-      $button-active-background-color: darken($color-brand, $active-background-darken-amount),
-      $button-active-border-color: darken($color-brand, $active-background-darken-amount)
+      $button-active-background-color: scale-color($color-brand, $lightness: -$active-background-darken-amount * 100),
+      $button-active-border-color: scale-color($color-brand, $lightness: -$active-background-darken-amount * 100)
     );
   }
 
@@ -71,12 +65,10 @@
       $button-background-color: $color-positive,
       $button-border-color: $color-positive,
       $button-text-color: $color-x-light,
-      $button-hover-background-color: darken($color-positive, $hover-background-darken-amount),
-      $button-hover-border-color: darken($color-positive, $hover-background-darken-amount),
+      $button-hover-background-color: scale-color($color-positive, $lightness: -$hover-background-darken-amount * 100),
       $button-disabled-background-color: $color-positive,
       $button-disabled-border-color: $color-positive,
-      $button-active-background-color: darken($color-positive, $active-background-darken-amount),
-      $button-active-border-color: darken($color-positive, $active-background-darken-amount)
+      $button-active-background-color: scale-color($color-positive, $lightness: -$active-background-darken-amount * 100)
     );
 
     @include vf-focus($color-focus-positive);
@@ -95,12 +87,11 @@
       $button-background-color: $color-negative,
       $button-border-color: $color-negative,
       $button-text-color: $color-x-light,
-      $button-hover-background-color: darken($color-negative, $hover-background-darken-amount),
-      $button-hover-border-color: darken($color-negative, $hover-background-darken-amount),
+      $button-hover-background-color: scale-color($color-negative, $lightness: -$hover-background-darken-amount * 100),
       $button-disabled-background-color: $color-negative,
       $button-disabled-border-color: $color-negative,
-      $button-active-background-color: darken($color-negative, $active-background-darken-amount),
-      $button-active-border-color: darken($color-negative, $active-background-darken-amount)
+      $button-active-background-color: scale-color($color-negative, $lightness: -$hover-background-darken-amount * 100),
+      $button-active-border-color: scale-color($color-negative, $lightness: -$hover-background-darken-amount * 100)
     );
 
     @include vf-focus($color-focus-negative);
@@ -119,9 +110,9 @@
       $button-background-color: $color-transparent,
       $button-border-color: $color-transparent,
       $button-text-color: $color-dark,
-      $button-hover-background-color: darken($color-x-light, $hover-background-darken-amount),
+      $button-hover-background-color: scale-color($color-x-light, $lightness: -$hover-background-darken-amount * 100),
       $button-hover-border-color: $color-transparent,
-      $button-active-background-color: darken($color-light, $active-background-darken-amount),
+      $button-active-background-color: scale-color($color-x-light, $lightness: -$active-background-darken-amount * 100),
       $button-active-border-color: $color-transparent
     );
   }
