--- a/scss/_patterns_contextual-menu.scss
+++ b/scss/_patterns_contextual-menu.scss
@@ -112,6 +112,8 @@
   // color of the contextual menu item link text
     $color-contextual-menu-text,
   // color of the contextual menu item link hover background
+    $color-contextual-menu-active-background,
+  // color of the contextual menu item link hover background
     $color-contextual-menu-hover-background
 ) {
   .p-contextual-menu__dropdown {
@@ -133,6 +135,10 @@
     &:hover {
       background-color: $color-contextual-menu-hover-background;
     }
+
+    &:active {
+      background-color: $color-contextual-menu-active-background;
+    }
   }
 }
 
@@ -141,7 +147,8 @@
     $color-contextual-menu-background: $colors--light-theme--background-default,
     $color-contextual-menu-border: $colors--light-theme--border-default,
     $color-contextual-menu-text: $colors--light-theme--text-default,
-    $color-contextual-menu-hover-background: $colors--light-theme--background-highlight
+    $color-contextual-menu-active-background: $colors--light-theme--background-active,
+    $color-contextual-menu-hover-background: $colors--light-theme--background-hover
   );
 }
 
@@ -150,6 +157,7 @@
     $color-contextual-menu-background: $colors--dark-theme--background-default,
     $color-contextual-menu-border: $colors--dark-theme--border-default,
     $color-contextual-menu-text: $colors--dark-theme--text-default,
-    $color-contextual-menu-hover-background: $colors--dark-theme--background-highlight
+    $color-contextual-menu-active-background: $colors--dark-theme--background-active,
+    $color-contextual-menu-hover-background: $colors--dark-theme--background-hover
   );
 }
