--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -32,8 +32,8 @@ $color-focus-positive: #003008 !default;
 $color-focus-negative: #3b0006 !default;
 
 // Button background color changes
-$hover-background-darken-amount: 0.05;
-$active-background-darken-amount: 0.15;
+$hover-background-opacity-amount: 0.05;
+$active-background-opacity-amount: 0.15;
 
 // NON-SEMANTIC COLOURS
 $color-label-validated: #006b75;
@@ -78,7 +78,8 @@ $colors--light-theme--text-muted: #666 !default;
 
 $colors--light-theme--background-default: #fff !default;
 $colors--light-theme--background-alt: #f7f7f7 !default;
-$colors--light-theme--background-highlight: rgba($color-x-dark, $hover-background-darken-amount) !default;
+$colors--light-theme--background-active: rgba($color-x-dark, $active-background-opacity-amount) !default;
+$colors--light-theme--background-hover: rgba($color-x-dark, $hover-background-opacity-amount) !default;
 $colors--light-theme--background-overlay: transparentize($color-dark, 0.15) !default;
 
 $colors--light-theme--border-default: rgba($color-x-dark, 0.2) !default;
@@ -93,7 +94,8 @@ $colors--dark-theme--text-muted: rgba($colors--dark-theme--text-default, 0.55) !
 
 $colors--dark-theme--background-default: hsl(0, 0%, 15%) !default;
 $colors--dark-theme--background-alt: hsl(0, 0%, 20%) !default;
-$colors--dark-theme--background-highlight: rgba($colors--dark-theme--text-default, 0.05) !default;
+$colors--dark-theme--background-active: rgba($colors--dark-theme--text-default, $active-background-opacity-amount) !default;
+$colors--dark-theme--background-hover: rgba($colors--dark-theme--text-default, $hover-background-opacity-amount) !default;
 $colors--dark-theme--background-overlay: transparentize($color-dark, 0.15) !default;
 
 $colors--dark-theme--border-default: rgba($colors--dark-theme--text-default, 0.2) !default;
