fix is-active text color

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -459,6 +459,7 @@
       @include vf-highlight-bar($color-sidenav-item-border-highlight, left);
 
       background: $color-sidenav-item-background-hover;
+      color: $color-sidenav-text-active;
     }
   }
 
@@ -546,6 +547,7 @@
       @include vf-highlight-bar($color-sidenav-item-border-highlight, left);
 
       background: $color-sidenav-item-background-hover;
+      color: $color-sidenav-text-active;
     }
   }
   // stylelint-enable selector-no-qualifying-type
