--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -441,10 +441,7 @@
       color: $color-sidenav-text-default;
     }
 
-    &:hover,
-    &.is-active,
-    &[aria-current='page'],
-    &[aria-current='true'] {
+    &:hover {
       background: $color-sidenav-item-background-hover;
       color: $color-sidenav-text-active;
     }
@@ -530,9 +527,7 @@
       color: $color-sidenav-text-default;
     }
 
-    &:hover,
-    &[aria-current='page'],
-    &[aria-current='true'] {
+    &:hover {
       background: $color-sidenav-item-background-hover;
       color: $color-sidenav-text-active;
     }
