#1917: pad large lists

--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -140,6 +140,7 @@ $spv-list-item--inner: null;
   .p-stepped-list {
     @extend %vf-clearfix;
     @extend %numbered-step-container;
+    @extend %section-padding--shallow;
 
     margin-bottom: 0; // spacing has been moved onto __item; this ensures that the heading / paragraph spacing matches that of regular headings / paragraphs
     margin-left: 0;
@@ -153,6 +154,10 @@ $spv-list-item--inner: null;
     padding-bottom: $spv-outer--scaleable;
     position: relative;
     width: 100%;
+
+    &:last-child {
+      padding-bottom: 0;
+    }
   }
 
   .p-stepped-list__bullet {
@@ -211,6 +216,7 @@ $spv-list-item--inner: null;
   .p-stepped-list--detailed {
     // $bullet-offset:
     @extend %numbered-step-container;
+    @extend %section-padding--shallow;
 
     margin-left: auto;
 
