--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -62,7 +62,8 @@ $states: (
 // Background colors:
 // --background           - default background color
 // --background-alt       - alternative version of background color, to be used to differentiate given surface
-// --background-highlight - background used on highlighted elements (for example selected elements in the navigation)
+// --background-active    - background for selected and active states of interactive elements
+// --background-hover     - background for hover states of interactive elements
 // --background-overlay   - background used to overlay the screen when showing a modal type dialogs
 //
 // Border colors:
