--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -239,7 +239,10 @@ $spv-list-item--inner: null;
 
     .p-stepped-list__item {
       @extend %vf-row;
+      @extend %vf-pseudo-border--top;
       @include vf-b-row-reset;
+
+      padding-top: $sp-unit;
     }
   }
 }
