--- a/templates/_layouts/docs.html
+++ b/templates/_layouts/docs.html
@@ -51,12 +51,12 @@
               {{ side_nav_item("/docs/base/forms", "Forms") }}
               {{ side_nav_item("/docs/base/reset", "Reset") }}
               {{ side_nav_item("/docs/base/tables", "Tables") }}
-              {{ side_nav_item("/docs/base/typography", "Typography", "new") }}
+              {{ side_nav_item("/docs/base/typography", "Typography") }}
             </ul>
 
             <ul class="p-side-navigation__list">
               <li class="p-side-navigation__item--title"><span class="p-side-navigation__text">Components</span></li>
-              {{ side_nav_item("/docs/patterns/accordion", "Accordion") }}
+              {{ side_nav_item("/docs/patterns/accordion", "Accordion", "updated") }}
               {{ side_nav_item("/docs/patterns/article-pagination", "Article pagination") }}
               {{ side_nav_item("/docs/patterns/breadcrumbs", "Breadcrumbs") }}
               {{ side_nav_item("/docs/patterns/buttons", "Buttons") }}
@@ -64,7 +64,7 @@
               {{ side_nav_item("/docs/patterns/contextual-menu", "Contextual menu") }}
               {{ side_nav_item("/docs/patterns/grid", "Grid") }}
               {{ side_nav_item("/docs/patterns/heading-icon", "Heading icon") }}
-              {{ side_nav_item("/docs/patterns/icons", "Icons", "updated") }}
+              {{ side_nav_item("/docs/patterns/icons", "Icons") }}
               {{ side_nav_item("/docs/patterns/images", "Images") }}
               {{ side_nav_item("/docs/patterns/inline-images", "Inline images") }}
               {{ side_nav_item("/docs/patterns/labels", "Labels") }}
