--- a/scss/_patterns_matrix.scss
+++ b/scss/_patterns_matrix.scss
@@ -121,7 +121,16 @@
 
   .p-matrix__title {
     @extend %vf-heading-4;
-    @extend %u-no-margin--bottom--h4;
+
+    @media (min-width: $breakpoint-heading-threshold) {
+      margin-bottom: -#{map-get($nudges, nudge--h4)} !important;
+    }
+
+    @if ($increase-font-size-on-larger-screens) {
+      @media (min-width: $breakpoint-x-large) {
+        margin-bottom: -#{map-get($nudges, nudge--h4-large)} !important;
+      }
+    }
   }
 
   .p-matrix__desc {
