add borders to detailed list (#3121)
* add borders to detailed list

* use lower contrast border

--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -240,6 +240,21 @@ $spv-list-item--inner: null;
     .p-stepped-list__item {
       @extend %vf-row;
       @include vf-b-row-reset;
+
+      @media (min-width: $breakpoint-medium) {
+        padding-top: $sp-unit;
+        position: relative;
+
+        &::after {
+          background-color: $colors--light-theme--border-low-contrast;
+          content: '';
+          height: 1px;
+          left: 0;
+          position: absolute;
+          right: 0;
+          top: 0;
+        }
+      }
     }
   }
 }
