Fix focus outline in tab strip

--- a/scss/_patterns_tabs.scss
+++ b/scss/_patterns_tabs.scss
@@ -76,6 +76,16 @@
         z-index: 1;
       }
 
+      // make sure tab strip border doesn't overlap focus outline
+      &:focus {
+        z-index: 1;
+
+        &::before,
+        &::after {
+          content: none;
+        }
+      }
+
       &:hover,
       &[aria-selected='true'] {
         @include vf-highlight-bar($color-tabs-active-bar, bottom, false);
