Fix mark up lint

--- a/templates/docs/examples/utilities/margin-collapse.html
+++ b/templates/docs/examples/utilities/margin-collapse.html
@@ -33,7 +33,7 @@
 <hr>
 <p class="p-muted-heading u-no-margin--bottom">&lt;p&gt; p-muted-heading with u-no-margin--bottom</p>
 <hr>
-<p class="p-text--default u-no-margin--bottom">&lt;p&gt; p-text--default with u-no-margin--bottom</h1>
+<p class="p-text--default u-no-margin--bottom">&lt;p&gt; p-text--default with u-no-margin--bottom</p>
 <hr>
 <p class="p-text--small u-no-margin--bottom">&lt;p&gt; small-text with u-no-margin--bottom</p>
 {% endblock %}
