Addressed review comments

--- a/scss/_patterns_chip.scss
+++ b/scss/_patterns_chip.scss
@@ -7,10 +7,9 @@
     background-color: rgba($color-x-dark, 0.05);
     border-radius: 1rem;
     display: inline-flex;
-    height: 1.25rem;
     margin-bottom: 0;
     margin-right: $sph-inner--small;
-    padding: 0 $sph-inner map-get($nudges, nudge--small);
+    padding: map-get($nudges, nudge--small) $sph-inner;
     user-select: none;
     white-space: nowrap;
 
@@ -44,6 +43,7 @@
       margin-bottom: 0;
       padding: 0 $sp-xx-small;
       position: relative;
+      top: -0.1rem;
     }
   }
 }
