Apply chip lead styling

--- a/scss/_patterns_chip.scss
+++ b/scss/_patterns_chip.scss
@@ -29,6 +29,11 @@
       background-color: rgba($color-x-dark, 0.2);
     }
 
+    .p-chip__lead {
+      font-size: #{map-get($font-sizes, x-small)}rem;
+      text-transform: uppercase;
+    }
+
     .p-chip__dismiss {
       @include vf-button-pattern(
         $button-background-color: transparent,
