--- a/templates/docs/examples/patterns/chip/index.html
+++ b/templates/docs/examples/patterns/chip/index.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="p-chip">
-  Owner: Bob
+  <span class="p-chip__lead">Owner</span>: Bob
   <button class="p-chip__dismiss">
     <i class="p-icon--close">Dismiss</i>
   </button>
