More to wrapping the value too

--- a/scss/_patterns_chip.scss
+++ b/scss/_patterns_chip.scss
@@ -31,7 +31,13 @@
 
     .p-chip__lead {
       font-size: #{map-get($font-sizes, x-small)}rem;
+      padding-right: $sph-inner--small / 2;
       text-transform: uppercase;
+    }
+
+    .p-chip__value {
+      position: relative;
+      top: -1px;
     }
 
     .p-chip__dismiss {
