--- a/templates/docs/examples/patterns/chip/multiple.html
+++ b/templates/docs/examples/patterns/chip/multiple.html
@@ -5,25 +5,29 @@
 
 {% block content %}
 <div class="p-chip">
-  <span class="p-chip__lead">Owner</span>: Anna
+  <span class="p-chip__lead">Owner:</span>
+  <span class="p-chip__value">Anna</span>
   <button class="p-chip__dismiss">
     <i class="p-icon--close">Dismiss</i>
   </button>
 </div>
 <div class="p-chip">
-  <span class="p-chip__lead">Country</span>: England
+  <span class="p-chip__lead">Country:</span>
+  <span class="p-chip__value">England</span>
   <button class="p-chip__dismiss">
     <i class="p-icon--close">Dismiss</i>
   </button>
 </div>
 <div class="p-chip">
-  <span class="p-chip__lead">Age</span>: > 30
+  <span class="p-chip__lead">Age:</span>
+  <span class="p-chip__value">&gt; 30</span>
   <button class="p-chip__dismiss">
     <i class="p-icon--close">Dismiss</i>
   </button>
 </div>
 <div class="p-chip">
-  <span class="p-chip__lead">Height</span>: > 153 cm
+  <span class="p-chip__lead">Height:</span>
+  <span class="p-chip__value">&gt; 153 cm</span>
   <button class="p-chip__dismiss">
     <i class="p-icon--close">Dismiss</i>
   </button>
