--- a/templates/docs/examples/patterns/chip/with-dismiss.html
+++ b/templates/docs/examples/patterns/chip/with-dismiss.html
@@ -5,7 +5,8 @@
 
 {% block content %}
 <div class="p-chip">
-  <span class="p-chip__lead">Owner</span>: Bob
+  <span class="p-chip__lead">Owner:</span>
+  <span class="p-chip__value">Bob</span>
   <button class="p-chip__dismiss">
     <i class="p-icon--close">Dismiss</i>
   </button>
